--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,10 @@ header nav ul li a:hover {
   bottom: 50px;
 }
 
+.cryptosource-project {
+  flex-basis: 100%;
+}
+
 .cryptosource-project::before {
   content: "";
   background-image: url('../img/cryptosource.png');
@@ -155,6 +159,10 @@ header nav ul li a:hover {
 
 .cryptosource-project:hover {
   transform: scale(1.01);
+}
+
+.quiz-project {
+  flex-basis: 30%;
 }
 
 .quiz-project::before {
@@ -174,6 +182,10 @@ header nav ul li a:hover {
   transform: scale(1.01);
 }
 
+.scheduler-project {
+  flex-basis: 30%;
+}
+
 .scheduler-project::before {
   background-image: url('../img/scheduler.png');
   content: "";
@@ -189,6 +201,10 @@ header nav ul li a:hover {
 
 .scheduler-project:hover {
   transform: scale(1.01);
+}
+
+.weather-project {
+  flex-basis: 30%;
 }
 
 .weather-project::before {
@@ -208,12 +224,8 @@ header nav ul li a:hover {
   transform: scale(1.01);
 }
 
-/*-- End hero styles --*/
-
-
-@media screen and (max-width: 768px) {
-  .project {
-    height: 150px;
-    width: 150px;
-  }
+.weather-project:hover + .weather-project::before {
+  opacity: 1;
 }
+
+/*-- End hero styles --*/
